--- a/domaci/CSS/style.css
+++ b/domaci/CSS/style.css
@@ -27,3 +27,61 @@ button {
   border: 0;
   align-self: center;
 }
+
+h2 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 35px;
+}
+
+.title {
+  text-align: center;
+  margin-bottom: 54px;
+}
+
+p {
+  font-family: 'Courier New', Courier, monospace;
+  line-height: 1.74;
+  margin-bottom: 25px;
+}
+
+a {
+  color: orange;
+}
+
+img {
+  width: 100%;
+  max-width: 1000px;
+  margin: 24px auto;
+}
+
+main {
+  max-width: 1000px;
+  margin: 75px auto;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 75px 25px;
+  background-color: lightblue;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+}
+
+li {
+  list-style-type: none;
+  margin-right: 24px;
+}
+
+li:last-child {
+  margin-right: 0;
+}
+
+li a {
+  color: white;
+  text-decoration: none;
+}
